finished submit button

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ table {
     padding: .5em;
     min-width: 3.5em;
   }
-  thead {
+  thead, tfoot{
     background: #7a7a7a;
     color: #fcfcfc;
   }
@@ -41,10 +41,9 @@ table {
     background: #dcdcdc;
   }
   tfoot {
-    background: #7a7a7a;
+    background: gray;
     border: 1px solid black;
     height: 2.15em;
-    
   }
 
   /* FORM ELEMENTS */
