--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ footer {
     font-size: 150%;
 }
 
-submitButton {
-align-items: end;
-}
+
 
 header {
   background-color: gray;
@@ -13,12 +11,6 @@ header {
   text-align: center;
 
 }
-
-
-
-
-
-
 
 
 /* TABLE */
@@ -64,6 +56,6 @@ input {
   button {
     padding: .5em;
     width: 75px;
-   
+    float: right;
   }
   
